[workspace]
members = [
    "atlas",
    "forma",
    "light",

    #

    "crates/world",
    "crates/render",
]
resolver = "3"

[workspace.dependencies]
render = { path = "crates/render" }
world = { path = "crates/world" }

bytemuck = "1.4"
eframe = "0.33.2"
egui = "0.33.2"
egui_tiles = "0.14.0"
egui-wgpu = "0.33.2"
egui-winit = "0.33.2"
glam = "0.30.9"
pollster = "0.4.0"
rfd = "0.15.4"
rusqlite = "0.37.0"
thiserror = "2.0.17"
uuid = "1.18.1"
wgpu = "27.0.1"
winit = "0.30.12"
zstd = "0.13.3"

[workspace.lints]
clippy.new_without_default = "allow"
