[package]
name = "forma"
version = "0.1.0"
edition = "2024"

[dependencies]
render.workspace = true
world.workspace = true

eframe = { workspace = true, features = ["wgpu"] }
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
egui_tiles.workspace = true
rfd.workspace = true
uuid = { workspace = true, features = ["v4"] }
winit.workspace = true
anyhow = "1.0.100"

[lints]
workspace = true
